# pandora-c-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  valgrind.suppressions  xmake.lua
include/: cJSON.h  pandora_curl.h
include/pandora/: client.h  error.h  pandora.h
sample/: CMakeLists.txt  sample.c
source/pandora/: pandora_curl.c
src/: CMakeLists.txt  buffer.c  client.c  crypto.c  utils.c  utils.h
src/cmake/: FindAPR.cmake
test/: main.cpp  pandora_curl_test.cpp
v2/: CMakeLists.txt  LICENSE  README.md
v2/include/pandora/: buffer.h  client.h
v2/src/: CMakeLists.txt  buffer.c  crypto.c  crypto.h
win32/: README.md
win32/include/pandora/: client.h
win32/pandora_c_sdk/: pandora_c_sdk.sln
win32/pandora_c_sdk/sample/: sample.vcxproj.filters
windows/: README.md
windows/pandora_c_sdk/: pandora_c_sdk.sln
windows/pandora_c_sdk/sample/: sample.cpp  sample.vcxproj
